--- a/source/index.html
+++ b/source/index.html
@@ -73,7 +73,7 @@
       </li>
     </ul>
 
-    <section class="works">
+    <section class="works container">
       <h2 class="works__head">Как это работает</h2>
       <ul class="works__list">
         <li class="works__item works__item--benefit">
@@ -103,7 +103,7 @@
       </ul>
     </section>
     <section class="example">
-      <div class="example__wrapper">
+      <div class="example__wrapper container">
         <div>
           <h2 class="example__title">Живой пример</h2>
           <article class="example__text">
@@ -140,7 +140,7 @@
     </section>
     <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
     <section class="footer__info">
-      <div class="footer__container">
+      <div class="footer__container container">
         <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
         <ul class="footer__smm-list smm-list">
           <li class="smm-list__item">
