--- a/source/form.html
+++ b/source/form.html
@@ -10,30 +10,32 @@
 
 <body>
   <header class="header">
-    <div class="header__container">
-      <div class="header__wrapper">
-        <a class="header__logo">
-          <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
-            alt="Здоровое питание для кошек «CAT ENERGY»">
-        </a>
-        <h2 class="visually-hidden">CAT ENERGY</h2>
-        <button type="button" class="burger">бургер</button>
-        <h2 class="visually-hidden">меню</h2>
-      </div>
-      <nav class="header__menu">
-        <ul class="site-list">
-          <li class="site-list__item site-list__item--active">
-            <a href="index.html" class="site-list__link">ГЛАВНАЯ</a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html" class="site-list__link">КАТАЛОГ ПРОДУКЦИИ</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link">ПОДБОР ПРОГРАММЫ</a>
-          </li>
-        </ul>
-      </nav>
+
+    <div class="header__wrapper">
+      <a href="index.html" class="header__logo">
+        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+          alt="Здоровое питание для кошек «CAT ENERGY»">
+      </a>
+      <h2 class="visually-hidden">CAT ENERGY</h2>
+      <button type="button" class="burger  burger--no-js">
+        <span class="burger__element"></span>
+      </button>
+      <h2 class="visually-hidden">меню</h2>
     </div>
+    <nav class="header__menu">
+      <ul class="site-list">
+        <li class="site-list__item site-list__item--active">
+          <a href="index.html" class="site-list__link">ГЛАВНАЯ</a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html" class="site-list__link">КАТАЛОГ ПРОДУКЦИИ</a>
+        </li>
+        <li class="site-list__item">
+          <a class="site-list__link ">ПОДБОР ПРОГРАММЫ</a>
+        </li>
+      </ul>
+    </nav>
+
   </header>
   <main class="main">
 
