--- a/source/index.html
+++ b/source/index.html
@@ -10,49 +10,52 @@
 
 <body>
   <header class="header">
-    <div class="header__container">
-      <div class="header__wrapper">
-        <a class="header__logo">
-          <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
-            alt="Здоровое питание для кошек «CAT ENERGY»">
-        </a>
-        <h2 class="visually-hidden">CAT ENERGY</h2>
-        <button type="button" class="burger">бургер</button>
-        <h2 class="visually-hidden">меню</h2>
-      </div>
-      <nav class="header__menu">
-        <ul class="site-list">
-          <li class="site-list__item site-list__item--active">
-            <a class="site-list__link site-list__link--index">ГЛАВНАЯ</a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html" class="site-list__link site-list__link--index">КАТАЛОГ ПРОДУКЦИИ</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html" class="site-list__link site-list__link--index">ПОДБОР ПРОГРАММЫ</a>
-          </li>
-        </ul>
-      </nav>
+
+    <div class="header__wrapper">
+      <a class="header__logo">
+        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+          alt="Здоровое питание для кошек «CAT ENERGY»">
+      </a>
+      <h2 class="visually-hidden">CAT ENERGY</h2>
+      <button type="button" class="burger  burger--no-js">
+        <span class="burger__element"></span>
+      </button>
+      <h2 class="visually-hidden">меню</h2>
     </div>
+    <nav class="header__menu">
+      <ul class="site-list">
+        <li class="site-list__item site-list__item--active">
+          <a class="site-list__link site-list__link--index">ГЛАВНАЯ</a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html" class="site-list__link site-list__link--index">КАТАЛОГ ПРОДУКЦИИ</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html" class="site-list__link site-list__link--index">ПОДБОР ПРОГРАММЫ</a>
+        </li>
+      </ul>
+    </nav>
+
   </header>
   <main>
-
-    <section class="introduce">
-      <div class="introduce__container">
-
-        <h1 class="introduce__head">Функциональное питание для котов</h1>
-        <p class="introduce__info">ЗАНЯЛСЯ СОБОЙ? ЗАЙМИСЬ КОТОМ!</p>
-        <img class="introduce__img" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Банка с кормом">
-        <a href="form.html" class="button">ПОДОБРАТЬ ПРОГРАММУ</a>
-
-      </div>
-    </section>
-
+    <div class="back">
+      <section class="introduce">
+        <div class="introduce__container">
+          <h1 class="introduce__head">Функциональное питание для котов</h1>
+          <p class="introduce__info">ЗАНЯЛСЯ СОБОЙ? ЗАЙМИСЬ КОТОМ!</p>
+          <img class="introduce__img" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Банка с кормом">
+          <a href="form.html" class="button introduce__button">ПОДОБРАТЬ ПРОГРАММУ</a>
+        </div>
+      </section>
+    </div>
     <ul class="program-choice">
       <li class="program-choice__item">
         <div class="program-choice__wrapper">
-          <!--Картинка-иконка-->
-          <h2 class="program-choice__item-head">ПОХУДЕНИЕ</h2>
+          <div class="program-choice__section">
+            <div class="program-choice__icon"></div>
+            <!--Картинка-иконка-->
+            <h2 class="program-choice__item-head">ПОХУДЕНИЕ</h2>
+          </div>
           <p class="program-choice__info">
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
@@ -62,8 +65,11 @@
       </li>
       <li class="program-choice__item">
         <div class="program-choice__wrapper">
-          <!--Картинка-иконка-->
-          <h2 class="program-choice__item-head">НАБОР МАССЫ</h2>
+          <div class="program-choice__section">
+            <div class="program-choice__icon"></div>
+            <!--Картинка-иконка-->
+            <h2 class="program-choice__item-head">НАБОР МАССЫ</h2>
+          </div>
           <p class="program-choice__info">
             Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
@@ -77,24 +83,28 @@
       <h2 class="works__head">Как это работает</h2>
       <ul class="works__list">
         <li class="works__item works__item--benefit">
+          <div class="works__icon"></div>
           <!--Картинка-иконка-->
           <p class="works__info">
             Функциональное питание содержит только полезные питательные вещества.
           </p>
         </li>
         <li class="works__item works__item--easy">
+          <div class="works__icon"></div>
           <!--Картинка-иконка-->
           <p class="works__info">
             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
           </p>
         </li>
         <li class="works__item works__item--econom">
+          <div class="works__icon"></div>
           <!--Картинка-иконка-->
           <p class="works__info">
             Замените один-два приема обычной еды на наше функциональное питание.
           </p>
         </li>
         <li class="works__item works__item--better">
+          <div class="works__icon"></div>
           <!--Картинка-иконка-->
           <p class="works__info">
             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
