Работа над ошибками

--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,6 @@
       </a>
       <h2 class="visually-hidden">CAT ENERGY</h2>
       <button type="button" class="burger  burger--no-js">
-        <span class="burger__element"></span>
       </button>
       <h2 class="visually-hidden">меню</h2>
     </div>
@@ -153,17 +152,16 @@
         <div class="html-academy">
           <p class="html-academy__p">
             HTML Academy
-
-            <a href="https://htmlacademy.ru">
-              <img class="html-academy__logo" alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
-            </a>
           </p>
+          <a href="https://htmlacademy.ru" class="html-academy__logo">
+            <img alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
+          </a>
+
         </div>
       </div>
     </section>
 
   </footer>
-
 </body>
 
 </html>
