--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,6 @@
       </a>
       <h2 class="visually-hidden">CAT ENERGY</h2>
       <button type="button" class="burger  burger--no-js">
-        <span class="burger__element"></span>
       </button>
       <h2 class="visually-hidden">меню</h2>
     </div>
@@ -37,8 +36,8 @@
     </nav>
 
   </header>
-  <main>
-    <div class="back">
+  <main class="main">
+    <div class="main__back-color">
       <section class="introduce">
         <div class="introduce__container">
           <h1 class="introduce__head">Функциональное питание для котов</h1>
@@ -83,28 +82,28 @@
       <h2 class="works__head">Как это работает</h2>
       <ul class="works__list">
         <li class="works__item works__item--benefit">
-          <div class="works__icon"></div>
+
           <!--Картинка-иконка-->
           <p class="works__info">
             Функциональное питание содержит только полезные питательные вещества.
           </p>
         </li>
         <li class="works__item works__item--easy">
-          <div class="works__icon"></div>
+
           <!--Картинка-иконка-->
           <p class="works__info">
             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
           </p>
         </li>
         <li class="works__item works__item--econom">
-          <div class="works__icon"></div>
+
           <!--Картинка-иконка-->
           <p class="works__info">
             Замените один-два приема обычной еды на наше функциональное питание.
           </p>
         </li>
         <li class="works__item works__item--better">
-          <div class="works__icon"></div>
+
           <!--Картинка-иконка-->
           <p class="works__info">
             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
@@ -169,11 +168,11 @@
         <div class="html-academy">
           <p class="html-academy__p">
             HTML Academy
-
-            <a href="https://htmlacademy.ru">
-              <img class="html-academy__logo" alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
-            </a>
           </p>
+          <a href="https://htmlacademy.ru" class="html-academy__logo">
+            <img alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
+          </a>
+
         </div>
       </div>
     </section>
