--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,6 @@
       </a>
       <h2 class="visually-hidden">CAT ENERGY</h2>
       <button type="button" class="burger  burger--no-js">
-        <span class="burger__element"></span>
       </button>
       <h2 class="visually-hidden">меню</h2>
     </div>
@@ -39,7 +38,7 @@
   </header>
   <main class="main">
     <div class="container">
-      <h1 class="main__head">Каталог продукции</h1>
+      <h1 class="main__head main__head--catalog">Каталог продукции</h1>
 
       <ul class="catalog">
         <!--№1-->
@@ -47,25 +46,27 @@
           <a href="/page1">
             <img class="catalog__item-img" alt="Cat Energy PRO 500 г вкус курицы" src="img/chicken-small-mobile@1x.jpg">
           </a>
-          <a href="/page1">
-            <h2 class="catalog__head">
-              Cat Energy PRO 500 г
-            </h2>
-          </a>
-          <table class="catalog-description">
-            <tr>
-              <td class="catalog-description__item">Объем</td>
-              <td class="catalog-description__item">500 г</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Вкус</td>
-              <td class="catalog-description__item">Курица</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Цена</td>
-              <td class="catalog-description__item">700 р</td>
-            </tr>
-          </table>
+          <div class="catalog__wrapper">
+            <a href="/page1">
+              <h2 class="catalog__head">
+                Cat Energy PRO 500 г
+              </h2>
+            </a>
+            <table class="catalog-description">
+              <tr>
+                <td class="catalog-description__item">Объем</td>
+                <td class="catalog-description__item">500 г</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Вкус</td>
+                <td class="catalog-description__item">Курица</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Цена</td>
+                <td class="catalog-description__item">700 р</td>
+              </tr>
+            </table>
+          </div>
           <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№2-->
@@ -73,26 +74,28 @@
           <a href="/page2">
             <img class="catalog__item-img" alt="Cat Energy PRO 1000 г вкус курицы" src="img/chicken-big-mobile@1x.jpg">
           </a>
-          <a href="/page2">
-            <h2 class="catalog__head">
-              Cat Energy
-              PRO 1000 г
-            </h2>
-          </a>
-          <table class="catalog-description">
-            <tr>
-              <td class="catalog-description__item">Объем</td>
-              <td class="catalog-description__item">1000 г</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Вкус</td>
-              <td class="catalog-description__item">Курица</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Цена</td>
-              <td class="catalog-description__item">1000 р</td>
-            </tr>
-          </table>
+          <div class="catalog__wrapper">
+            <a href="/page2">
+              <h2 class="catalog__head">
+                Cat Energy
+                PRO 1000 г
+              </h2>
+            </a>
+            <table class="catalog-description">
+              <tr>
+                <td class="catalog-description__item">Объем</td>
+                <td class="catalog-description__item">1000 г</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Вкус</td>
+                <td class="catalog-description__item">Курица</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Цена</td>
+                <td class="catalog-description__item">1000 р</td>
+              </tr>
+            </table>
+          </div>
           <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№3-->
@@ -100,26 +103,28 @@
           <a href="/page3">
             <img class="catalog__item-img" alt="Cat Energy PRO 500 г вкус рыбы" src="img/fish-small-mobile@1x.jpg">
           </a>
-          <a href="/page3">
-            <h2 class="catalog__head">
-              Cat Energy
-              PRO 500 г
-            </h2>
-          </a>
-          <table class="catalog-description">
-            <tr>
-              <td class="catalog-description__item">Объем</td>
-              <td class="catalog-description__item">500 г</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Вкус</td>
-              <td class="catalog-description__item">Рыба</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Цена</td>
-              <td class="catalog-description__item">700 р</td>
-            </tr>
-          </table>
+          <div class="catalog__wrapper">
+            <a href="/page3">
+              <h2 class="catalog__head">
+                Cat Energy
+                PRO 500 г
+              </h2>
+            </a>
+            <table class="catalog-description">
+              <tr>
+                <td class="catalog-description__item">Объем</td>
+                <td class="catalog-description__item">500 г</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Вкус</td>
+                <td class="catalog-description__item">Рыба</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Цена</td>
+                <td class="catalog-description__item">700 р</td>
+              </tr>
+            </table>
+          </div>
           <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№4-->
@@ -127,26 +132,28 @@
           <a href="/page4">
             <img class="catalog__item-img" alt="Cat Energy PRO 1000 г вкус рыбы" src="img/fish-big-mobile@1x.jpg">
           </a>
-          <a href="/page4">
-            <h2 class="catalog__head">
-              Cat Energy
-              PRO 1000 г
-            </h2>
-          </a>
-          <table class="catalog-description">
-            <tr>
-              <td class="catalog-description__item">Объем</td>
-              <td class="catalog-description__item">1000 г</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Вкус</td>
-              <td class="catalog-description__item">Курица</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Цена</td>
-              <td class="catalog-description__item">1000 р</td>
-            </tr>
-          </table>
+          <div class="catalog__wrapper">
+            <a href="/page4">
+              <h2 class="catalog__head">
+                Cat Energy
+                PRO 1000 г
+              </h2>
+            </a>
+            <table class="catalog-description">
+              <tr>
+                <td class="catalog-description__item">Объем</td>
+                <td class="catalog-description__item">1000 г</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Вкус</td>
+                <td class="catalog-description__item">Курица</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Цена</td>
+                <td class="catalog-description__item">1000 р</td>
+              </tr>
+            </table>
+          </div>
           <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№5-->
@@ -155,26 +162,28 @@
             <img class="catalog__item-img" alt="Cat Energy Slim 500 г вкус гречки"
               src="img/buckwheat-small-mobile@1x.jpg">
           </a>
-          <a href="/page5">
-            <h2 class="catalog__head">
-              Cat Energy
-              Slim 500 г
-            </h2>
-          </a>
-          <table class="catalog-description">
-            <tr>
-              <td class="catalog-description__item">Объем</td>
-              <td class="catalog-description__item">500 г</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Вкус</td>
-              <td class="catalog-description__item">Гречка</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Цена</td>
-              <td class="catalog-description__item">400 р</td>
-            </tr>
-          </table>
+          <div class="catalog__wrapper">
+            <a href="/page5">
+              <h2 class="catalog__head">
+                Cat Energy
+                Slim 500 г
+              </h2>
+            </a>
+            <table class="catalog-description">
+              <tr>
+                <td class="catalog-description__item">Объем</td>
+                <td class="catalog-description__item">500 г</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Вкус</td>
+                <td class="catalog-description__item">Гречка</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Цена</td>
+                <td class="catalog-description__item">400 р</td>
+              </tr>
+            </table>
+          </div>
           <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№6-->
@@ -183,26 +192,28 @@
             <img class="catalog__item-img" alt="Cat Energy Slim 1000 г вкус гречки"
               src="img/buckwheat-big-mobile@1x.jpg">
           </a>
-          <a href="/page6">
-            <h2 class="catalog__head">
-              Cat Energy
-              Slim 1000 г
-            </h2>
-          </a>
-          <table class="catalog-description">
-            <tr>
-              <td class="catalog-description__item">Объем</td>
-              <td class="catalog-description__item">1000 г</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Вкус</td>
-              <td class="catalog-description__item">Гречка</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Цена</td>
-              <td class="catalog-description__item">700 р</td>
-            </tr>
-          </table>
+          <div class="catalog__wrapper">
+            <a href="/page6">
+              <h2 class="catalog__head">
+                Cat Energy
+                Slim 1000 г
+              </h2>
+            </a>
+            <table class="catalog-description">
+              <tr>
+                <td class="catalog-description__item">Объем</td>
+                <td class="catalog-description__item">1000 г</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Вкус</td>
+                <td class="catalog-description__item">Гречка</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Цена</td>
+                <td class="catalog-description__item">700 р</td>
+              </tr>
+            </table>
+          </div>
           <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№7-->
@@ -210,26 +221,28 @@
           <a href="/page7">
             <img class="catalog__item-img" alt="Cat Energy Slim 500 г вкус риса" src="img/rice-small-mobile@1x.jpg">
           </a>
-          <a href="/page7">
-            <h2 class="catalog__head">
-              Cat Energy
-              Slim 500 г
-            </h2>
-          </a>
-          <table class="catalog-description">
-            <tr>
-              <td class="catalog-description__item">Объем</td>
-              <td class="catalog-description__item">500 г</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Вкус</td>
-              <td class="catalog-description__item">Рис</td>
-            </tr>
-            <tr>
-              <td class="catalog-description__item">Цена</td>
-              <td class="catalog-description__item">500 р</td>
-            </tr>
-          </table>
+          <div class="catalog__wrapper">
+            <a href="/page7">
+              <h2 class="catalog__head">
+                Cat Energy
+                Slim 500 г
+              </h2>
+            </a>
+            <table class="catalog-description">
+              <tr>
+                <td class="catalog-description__item">Объем</td>
+                <td class="catalog-description__item">500 г</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Вкус</td>
+                <td class="catalog-description__item">Рис</td>
+              </tr>
+              <tr>
+                <td class="catalog-description__item">Цена</td>
+                <td class="catalog-description__item">500 р</td>
+              </tr>
+            </table>
+          </div>
           <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <li class="catalog__item more-info">
@@ -308,9 +321,7 @@
     <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
     <section class="footer__info">
       <div class="footer__container container">
-        <a class="footer__go">
-          <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
-        </a>
+        <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
         <ul class="footer__smm-list smm-list">
           <li class="smm-list__item">
             <a href="#">vk
@@ -328,17 +339,16 @@
         <div class="html-academy">
           <p class="html-academy__p">
             HTML Academy
-
-            <a href="https://htmlacademy.ru">
-              <img class="html-academy__logo" alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
-            </a>
           </p>
+          <a href="https://htmlacademy.ru" class="html-academy__logo">
+            <img alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
+          </a>
+
         </div>
       </div>
     </section>
 
   </footer>
-
 </body>
 
 </html>
