Пытаемся подогнать под ПП

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -146,7 +146,7 @@
               </tr>
               <tr>
                 <td class="catalog-description__item">Вкус</td>
-                <td class="catalog-description__item">Курица</td>
+                <td class="catalog-description__item">Рыба</td>
               </tr>
               <tr>
                 <td class="catalog-description__item">Цена</td>
