--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
     </div>
     <nav class="header__menu">
       <ul class="site-list">
-        <li class="site-list__item site-list__item--active">
+        <li class="site-list__item">
           <a class="site-list__link site-list__link--index">ГЛАВНАЯ</a>
         </li>
         <li class="site-list__item">
@@ -71,7 +71,7 @@
           </div>
           <p class="program-choice__info">
             Заработать авторитет среди дворовых котов и даже собак?
-            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            Серия Cat Energy Pro поможет вашему коту нарастить  необходимые мышцы!
           </p>
           <a href="#catalog-2" class="program-choice__get">Каталог PRO </a>
         </div>
