--- a/source/index.html
+++ b/source/index.html
@@ -120,16 +120,16 @@
             Отличный результат без изнуряющих тренировок!
             При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </article>
-          <table class="example__features">
-            <tr class="example__bold">
-              <td>5 кг</td>
-              <td>60 дней</td>
-            </tr>
-            <tr class="example__small">
-              <td>снижение веса</td>
-              <td>затрачено времени</td>
-            </tr>
-          </table>
+          <div class="example__features">
+            <div class="example__description">
+              <p class="example__bold">5 кг</p>
+              <p class="example__small">снижение веса</p>
+            </div>
+            <div class="example__description">
+              <p class="example__bold">60 дней</p>
+              <p class="example__small">затрачено времени</p>
+            </div>
+          </div>
           <p class="example__cost">затраты на питание:15 000 руб.</p>
         </div>
         <div>
